# entra-ig

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
backend/app/: config.py  database.py  logging_config.py  main.py  models.py
backend/app/api/: routes.py
backend/app/services/: graph_exporter.py  sanitizer.py  sync_service.py
backend/tests/: test_database.py  test_graph_exporter.py  test_routes.py  test_sanitizer.py  test_sync_service.py
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
